<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/global_town"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/town_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:gravity="start"
            android:textSize="32sp"
            android:text="@string/not_init"
            tools:text="OZAN"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:layout_marginTop="90dp"
            android:text="@string/weather" />

        <TextView
            android:id="@+id/actual_weather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:text="@string/not_init"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:layout_marginTop="20dp"
            android:text="@string/press" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:text="@string/not_init"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:layout_marginTop="20dp"
            android:text="@string/humid" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:text="@string/not_init"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:layout_marginTop="90dp"
            android:text="@string/actual" />

        <TextView
            android:id="@+id/temperture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            android:text="@string/not_init"
            tools:text="28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:layout_marginTop="20dp"
            android:text="@string/ressen" />

        <TextView
            android:id="@+id/ressenti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            tools:text="28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:layout_marginTop="30dp"
            android:text="@string/t_max" />

        <TextView
            android:id="@+id/max"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:text="@string/not_init"
            tools:text="28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:text="@string/t_min" />

        <TextView
            android:id="@+id/min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:text="@string/not_init"
            tools:text="28" />
    </LinearLayout>

</LinearLayout>